# controller/interfaces.go
@@ -5,10 +5,16 @@ import (
 	"reportify-backend/entity"
 )
 
-type UserUseCase interface{}
+type UserUseCase interface {
+	GetUser(ctx context.Context, userID string) (*entity.User, error)
+	GetUsers(ctx context.Context, organizationCode string) ([]*entity.User, error)
+	InviteUser(ctx context.Context, email, organizationCode, userID string) (*entity.User, error)
+}
 
 type OrganizationUseCase interface {
-	GetOrganizations(ctx context.Context, limit *int, offset *int) ([]*entity.Organization, error)
+	GetOrganization(ctx context.Context, organizationCode, userID string) (*entity.Organization, error)
+	GetOrganizations(ctx context.Context, userID string) ([]*entity.Organization, error)
+	UpdateOrganization(ctx context.Context, oldOrganizationCode, userID, organizationName, organizationCode, mission, vision, value string) (*entity.Organization, error)
 }
 
 type ReportUseCase interface{}
